fix router highlight on mobile

--- a/resources/assets/sass/common.sass
+++ b/resources/assets/sass/common.sass
@@ -128,3 +128,11 @@ body,footer
 .fade-enter, .fade-leave-to 
   opacity: 0
   
+
+
+.fade-fast-enter-active ,.fade-fast-leave-active
+  transition: opacity 0.2s, max-height 0.2s
+
+.fade-fast-enter, .fade-fast-leave-to 
+  opacity: 0
+  
